<resources>
    <string name="app_name">speedQuiz</string>

    <string name="menu_config">Config</string>

    <string name="start_titre">Speed Quiz</string>
    <string name="start_nom_j1">Joueur 1</string>
    <string name="start_nom_j2">Joueur 2</string>
    <string name="start_bt_jouer">Jouer</string>
    <string name="start_bt_annuler">Annuler</string>

    <string name="quiz_nom_j1">Nom joueur 1</string>
    <string name="quiz_nom_j2">Nom joueur 2</string>
    <string name="quiz_bt_rej">Rejouer</string>
    <string name="quiz_bt_menu">Menu</string>
    <string name="quiz_qst_j">Question 1</string>
    <string name="quiz_score">0</string>

    <string name="config_title">Configuration</string>
    <string name="config_titre_delais">Délais</string>
    <string name="config_titre_qst">Ajouter une question</string>
    <string name="config_titre_modif_qst">Gérer liste de questions</string>
    <string name="config_titre_nbr_qst">Nombre de questions</string>
    <string name="config_bt_valider_delais">Valider</string>
    <string name="config_qst_perso">Question</string>
    <string name="config_rep_qst_vrai">Vrai</string>
    <string name="config_rep_qst_faux">Faux</string>


    <string name="qst_titre">Questions</string>
    <string name="qst_modif_titre">Modifier la question</string>
</resources>