<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp">
        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/start_txt_titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_titre"
        android:layout_marginTop="110dp"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/start.layout.txt.nomJoueur"
        android:id="@+id/start_layout_nom_j1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/start_nom_j1"
        app:layout_constraintTop_toBottomOf="@id/start_txt_titre" >

        <com.google.android.material.textfield.TextInputEditText
            style="@style/start.txt.nomJoueur"
            android:id="@+id/start_et_nom_j1"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/start.layout.txt.nomJoueur"
        android:id="@+id/start_layout_nom_j2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/start_nom_j2"
        app:layout_constraintTop_toBottomOf="@id/start_layout_nom_j1">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/start.txt.nomJoueur"
            android:id="@+id/start_et_nom_j2"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/start_bt_jouer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_bt_jouer"
        android:layout_marginTop="@dimen/start_margin_top_txt"
        app:layout_constraintTop_toBottomOf="@id/start_layout_nom_j2"
        app:layout_constraintEnd_toEndOf="@id/start_layout_nom_j2"
        />

    <Button
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:id="@+id/start_bt_annuler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/start_bt_sep"
        android:text="@string/start_bt_annuler"
        app:layout_constraintTop_toTopOf="@id/start_bt_jouer"
        app:layout_constraintEnd_toStartOf="@+id/start_bt_jouer"
        />


</androidx.constraintlayout.widget.ConstraintLayout>